fix fixing a bug with white space appearing at the bottom of the page when a popup appears

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -13,8 +13,6 @@
   max-width: 1440px;
   margin: 0 auto;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  /* TODO: */
-  border: 1px solid white;
 }
 
 .body {
